Create the load_image function

--- a/Job_script/main_script.ipynb
+++ b/Job_script/main_script.ipynb
@@ -27,13 +27,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing all the packages needed to run this code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importing requests - taking information from web-pages \n",
-    "import requests"
+    "import load_image"
    ]
   },
   {
@@ -55,25 +61,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'chu3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-4b1f8b8d2c65>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mimage\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mload_image\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchu3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjpg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'chu3' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "#url_image = \"https://github.com/MATS64664-2021-Group-2/Sample-Micrographs/tree/main/Example%20Micrographs%20Python%20Course%20Pratheek\\chu2.jpg\"\n",
-    "url_image = \"https://github.com/MATS64664-2021-Group-2/Sample-Micrographs.git\"\n",
-    "image_name = \"chu2.jpg\""
+    "image=load_image.image(chu3.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot the image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "image = requests.get(url_image).content\n",
-    "with open(image_name, 'wb') as handler:\n",
-    "    handler.write(image)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
