--- a/Job_script/load_image.ipynb
+++ b/Job_script/load_image.ipynb
@@ -28,12 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importing requests - taking information from web-pages \n",
-    "import requests"
+    "# We import the packages we need\n",
+    "from matplotlib import pyplot as plt\n",
+    "from PIL import Image\n",
+    "import os, os.path\n",
+    "import matplotlib.axes\n",
+    "\n",
+    "# And also we import the functions we have created, which are in the packages folder\n",
+    "#from packages import load_image\n",
+    "from packages import plot_image"
    ]
   },
   {
@@ -55,24 +62,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#url_image = \"https://github.com/MATS64664-2021-Group-2/Sample-Micrographs/tree/main/Example%20Micrographs%20Python%20Course%20Pratheek\\chu2.jpg\"\n",
-    "url_image = \"https://github.com/MATS64664-2021-Group-2/Sample-Micrographs.git\"\n",
-    "image_name = \"chu2.jpg\""
+    "# Introduce here the path where the images are located\n",
+    "images_path = \"C:\\\\Users\\Laura\\Dropbox (The University of Manchester)\\Software Engineering practice\\Hydride-Connect-Group-2\\Job_script\\Micrographs\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting image 1\n",
+      "Plotting image 2\n",
+      "Plotting image 3\n",
+      "Plotting image 4\n",
+      "Plotting image 5\n",
+      "Plotting image 6\n",
+      "Plotting image 7\n",
+      "Plotting image 8\n",
+      "Plotting image 9\n",
+      "Plotting image 10\n",
+      "Plotting image 11\n",
+      "Plotting image 12\n",
+      "Plotting image 13\n",
+      "Plotting image 14\n",
+      "Plotting image 15\n",
+      "Plotting image 16\n"
+     ]
+    }
+   ],
    "source": [
-    "image = requests.get(url_image).content\n",
-    "with open(image_name, 'wb') as handler:\n",
-    "    handler.write(image)"
+    "plot_image.plotim(images_path, valid_images= [\".jpg\",\".gif\",\".png\",\".tga\"])"
    ]
   },
   {
@@ -178,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
