Added the calling code in load_image

--- a/Job_script/load_image.ipynb
+++ b/Job_script/load_image.ipynb
@@ -35,6 +35,7 @@
     "# We import the packages we need\n",
     "from matplotlib import pyplot as plt\n",
     "from PIL import Image\n",
+    "from ipynb.fs.full.Otsu_Thresholding import Otsu\n",
     "import os, os.path\n",
     "import matplotlib.axes\n",
     "\n",
@@ -164,7 +165,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Otsu_Result = Otsu(ImgProcessed)"
+   ]
   },
   {
    "cell_type": "markdown",
