--- a/Job_script/load_image.ipynb
+++ b/Job_script/load_image.ipynb
@@ -28,19 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We import the packages we need\n",
     "from matplotlib import pyplot as plt\n",
     "from PIL import Image\n",
-    "from ipynb.fs.full.Otsu_Thresholding import Otsu\n",
     "import os, os.path\n",
     "import matplotlib.axes\n",
     "\n",
     "# And also we import the functions we have created, which are in the packages folder\n",
-    "from packages import plot_image"
+    "from packages import plot_image\n",
+    "from Otsu_Thresholding import Otsu"
    ]
   },
   {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,29 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Plotting image 1\n",
-      "Plotting image 2\n",
-      "Plotting image 3\n",
-      "Plotting image 4\n",
-      "Plotting image 5\n",
-      "Plotting image 6\n",
-      "Plotting image 7\n",
-      "Plotting image 8\n",
-      "Plotting image 9\n",
-      "Plotting image 10\n",
-      "Plotting image 11\n",
-      "Plotting image 12\n",
-      "Plotting image 13\n",
-      "Plotting image 14\n",
-      "Plotting image 15\n",
-      "Plotting image 16\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: 'C:\\\\Users\\\\Laura\\\\Dropbox (The University of Manchester)\\\\Software Engineering practice\\\\Hydride-Connect-Group-2\\\\Job_script\\\\Micrographs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-d26e22135436>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplot_image\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplotim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimages_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalid_images\u001b[0m\u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\".jpg\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\".gif\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\".png\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\".tga\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Documents\\GitHub\\Hydride-Connect-Group-2\\Job_script\\packages\\plot_image.py\u001b[0m in \u001b[0;36mplotim\u001b[1;34m(images_path, valid_images)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mplotim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimages_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalid_images\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimages_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m         \u001b[1;31m#imgs[n].show()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'C:\\\\Users\\\\Laura\\\\Dropbox (The University of Manchester)\\\\Software Engineering practice\\\\Hydride-Connect-Group-2\\\\Job_script\\\\Micrographs'"
      ]
     }
    ],
