Seperated image into horizontal strips, blured them and rejoined them

--- a/Job_script/load_image.ipynb
+++ b/Job_script/load_image.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,8 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
+   "execution_count": 126,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -157,14 +159,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Crop image to remove scale bar."
+    "Break the images into horizontal strips to reduce the effects of interference on measuring the radial HCC. Blur corresponding strips."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 139,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 15\n",
+      "15 30\n",
+      "30 45\n",
+      "45 60\n",
+      "60 75\n",
+      "75 90\n",
+      "90 105\n",
+      "105 120\n",
+      "120 135\n",
+      "135 150\n",
+      "150 165\n",
+      "165 180\n",
+      "180 195\n",
+      "195 210\n",
+      "210 225\n",
+      "225 240\n",
+      "240 255\n",
+      "255 270\n",
+      "270 285\n",
+      "285 300\n",
+      "300 315\n",
+      "315 330\n",
+      "330 345\n",
+      "345 360\n",
+      "360 375\n",
+      "375 390\n",
+      "390 405\n",
+      "405 420\n",
+      "420 435\n",
+      "435 450\n",
+      "450 465\n",
+      "465 480\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SecNum = 15\n",
     "\n",
@@ -180,14 +233,27 @@
     "\n",
     "for y in range(0,np.size(img,0),SecNum):\n",
     "        y1 = y + SecNum\n",
-    "        \n",
     "        section = img[y:y1, 0:np.size(img,1)]\n",
     "        \n",
-    "        tracker += 1\n",
-    "        \n",
     "        cv2.imwrite(\"Sections/\" + str(tracker) +\".jpg\",section)\n",
+    "        \n",
+    "        tracker +=1\n",
+    "        \n",
+    "for i in range(0,tracker):\n",
+    "    Sec = cv2.imread(\"./Sections/\" + str(i) + \".jpg\",0)\n",
+    "    Blur = cv2.GaussianBlur(Sec, (7,7),0)\n",
+    "    cv2.imwrite(\"Blurs/\" + str(i) +\".jpg\",Blur)\n",
+    "    \n",
+    "    if i > 0:\n",
+    "        if i == 1:\n",
+    "            ImgTop = cv2.imread(\"./Blurs/\" + str(i-1) + \".jpg\")\n",
+    "            ImgBot = cv2.imread(\"./Blurs/\" + str(i) + \".jpg\")\n",
+    "            BlurJoin = np.concatenate((ImgTop, ImgBot), axis=0)\n",
+    "        else:\n",
+    "            ImgBot = cv2.imread(\"./Blurs/\" + str(i) + \".jpg\")\n",
+    "            BlurJoin = np.concatenate((BlurJoin, ImgBot), axis=0)\n",
     "\n",
-    "Blur = cv2.GaussianBlur(img, (5,5),0)"
+    "cv2.imwrite('BlurJoined.jpg', BlurJoin)\n"
    ]
   },
   {
@@ -338,6 +404,23 @@
    "source": [
     "numOfRows = np.size(img, 1)\n",
     "numOfRows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n"
+     ]
+    }
+   ],
+   "source": [
+    "%reset"
    ]
   },
   {
