--- a/Job_script/load_image.ipynb
+++ b/Job_script/load_image.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,8 @@
     "\n",
     "\n",
     "# And also we import the functions we have created, which are in the packages folder\n",
-    "from packages import plot_image"
+    "from packages import plot_image\n",
+    "from packages import Edge"
    ]
   },
   {
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 126,
    "metadata": {
     "scrolled": true
    },
@@ -407,7 +408,7 @@
        "True"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,16 +418,11 @@
     "\n",
     "for i in range(tracker):\n",
     "    \n",
-    "    img = cv2.imread(\"./Thresholding/Otsu/\" + str(i) + \".png\", cv2.IMREAD_UNCHANGED)\n",
-    "    imgOtsu = np.load(\"./Thresholding/Otsu/\" + str(i) + \".npy\")\n",
+    "    imgO = cv2.imread(\"./Thresholding/Otsu/\" + str(i) + \".png\", 0)\n",
     "    \n",
-    "    contours, hierarchy = cv2.findContours(imgOtsu,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    CannyImgO = Edge.auto_canny(imgO)\n",
     "    \n",
-    "    img_contours = np.zeros(imgOtsu.shape)\n",
-    "    \n",
-    "    cv2.drawContours (img_contours, contours, -1, (0,255,0),3)\n",
-    "    \n",
-    "    cv2.imwrite(\"Edges/Otsu/\" + str(i) +\".png\",img_contours)            \n",
+    "    cv2.imwrite(\"Edges/Otsu/\" + str(i) +\".png\",CannyImgO)            \n",
     "    \n",
     "    if i > 0:\n",
     "        if i == 1:\n",
@@ -434,36 +430,50 @@
     "            ImgR = cv2.imread(\"./Edges/Otsu/\" + str(i) + \".png\")\n",
     "            EdgesO = np.concatenate((ImgL, ImgR), axis=1)\n",
     "            \n",
-    "#             ImgL = cv2.imread(\"./Edges/Kmeans/\" + str(i-1) + \".png\")\n",
-    "#             ImgR = cv2.imread(\"./Edges/Kmeans/\" + str(i) + \".png\")\n",
+    "#             ImgL = cv2.imread(\"./Edges/Otsu/1\" + str(i-1) + \".png\")\n",
+    "#             ImgR = cv2.imread(\"./Edges/Otsu/1\" + str(i) + \".png\")\n",
     "#             EdgesK = np.concatenate((ImgL, ImgR), axis=1)\n",
     "        else:\n",
     "            ImgR = cv2.imread(\"./Edges/Otsu/\" + str(i) + \".png\")\n",
     "            EdgesO = np.concatenate((EdgesO, ImgR), axis=1)\n",
     "            \n",
-    "#             ImgR = cv2.imread(\"./Edges/Kmeans/\" + str(i) + \".png\")\n",
+    "#             ImgR = cv2.imread(\"./Edges/Otsu/1\" + str(i) + \".png\")\n",
     "#             EdgesK = np.concatenate((EdgesK, ImgR), axis=1)\n",
     "\n",
     "cv2.imwrite(\"Edges/Cont0.png\", EdgesO)\n",
-    "# cv2.imwrite(\"Edges/ContK.png\", EdgesK)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'NoneType'>\n"
+      "0.07462466261808372\n"
      ]
     }
    ],
    "source": [
-    "print(type(img))"
+    "imgO = cv2.imread(\"./Edges/Cont0.png\", 0)\n",
+    "\n",
+    "Hydride = 0\n",
+    "\n",
+    "HCC =[]\n",
+    "\n",
+    "for i in range(np.size(imgO,1)):\n",
+    "    for j in range(np.size(imgO,0)):\n",
+    "        if imgO[j,i] > 0:\n",
+    "            Hydride += 1\n",
+    "    HCC.append(Hydride/(np.size(imgO,0)))\n",
+    "    Hydride = 0\n",
+    "\n",
+    "AVG_HCC = sum(HCC)/len(HCC)\n",
+    "\n",
+    "print(AVG_HCC)"
    ]
   },
   {
@@ -479,9 +489,7 @@
      ]
     }
    ],
-   "source": [
-    "print(w)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
