Added second way of measurin HCC through opencv contours

--- a/Job_script/load_image.ipynb
+++ b/Job_script/load_image.ipynb
@@ -248,16 +248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1734e288d30>"
+       "<matplotlib.image.AxesImage at 0x1734e6ca220>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 216,
    "metadata": {
     "scrolled": true
    },
@@ -408,7 +408,7 @@
        "True"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -478,18 +478,295 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19\n"
+      "0 1 480 315 315\n",
+      "0 2 480 308 315\n",
+      "0 3 480 312 315\n",
+      "0 4 480 300 315\n",
+      "0 5 480 300 315\n",
+      "0 6 480 285 315\n",
+      "0 7 480 261 315\n",
+      "0 8 480 244 315\n",
+      "0 9 480 283 315\n",
+      "0 10 480 162 315\n",
+      "0 11 480 100 315\n",
+      "0 12 480 89 315\n",
+      "0 13 480 233 315\n",
+      "0 14 480 22 315\n",
+      "0 15 480 10 315\n",
+      "0 16 480 60 315\n",
+      "1 2 315 308 309\n",
+      "1 3 315 312 309\n",
+      "312 309 301\n",
+      "3\n",
+      "11\n",
+      "8\n",
+      "1 4 315 300 309\n",
+      "1 5 315 300 309\n",
+      "1 6 315 285 309\n",
+      "1 7 315 261 309\n",
+      "1 8 315 244 309\n",
+      "1 9 315 283 309\n",
+      "1 10 315 162 309\n",
+      "1 11 315 100 309\n",
+      "1 12 315 89 309\n",
+      "1 13 315 233 309\n",
+      "1 14 315 22 309\n",
+      "1 15 315 10 309\n",
+      "1 16 315 60 309\n",
+      "2 3 308 309 304\n",
+      "309 304 301\n",
+      "5\n",
+      "8\n",
+      "3\n",
+      "2 4 308 300 304\n",
+      "2 5 308 300 304\n",
+      "2 6 308 285 304\n",
+      "2 7 308 261 304\n",
+      "2 8 308 244 304\n",
+      "2 9 308 283 304\n",
+      "2 10 308 162 304\n",
+      "2 11 308 100 304\n",
+      "2 12 308 89 304\n",
+      "2 13 308 233 304\n",
+      "2 14 308 22 304\n",
+      "2 15 308 10 304\n",
+      "2 16 308 60 304\n",
+      "3 4 304 300 301\n",
+      "3 5 304 300 301\n",
+      "3 6 304 285 301\n",
+      "3 7 304 261 301\n",
+      "3 8 304 244 301\n",
+      "3 9 304 283 301\n",
+      "3 10 304 162 301\n",
+      "3 11 304 100 301\n",
+      "3 12 304 89 301\n",
+      "3 13 304 233 301\n",
+      "3 14 304 22 301\n",
+      "3 15 304 10 301\n",
+      "3 16 304 60 301\n",
+      "4 5 300 300 289\n",
+      "300 289 287\n",
+      "11\n",
+      "13\n",
+      "2\n",
+      "4 6 300 285 289\n",
+      "4 7 300 261 289\n",
+      "4 8 300 244 289\n",
+      "4 9 300 283 289\n",
+      "4 10 300 162 289\n",
+      "4 11 300 100 289\n",
+      "4 12 300 89 289\n",
+      "4 13 300 233 289\n",
+      "4 14 300 22 289\n",
+      "4 15 300 10 289\n",
+      "4 16 300 60 289\n",
+      "5 6 289 285 287\n",
+      "5 7 289 261 287\n",
+      "5 8 289 244 287\n",
+      "5 9 289 283 287\n",
+      "5 10 289 162 287\n",
+      "5 11 289 100 287\n",
+      "5 12 289 89 287\n",
+      "5 13 289 233 287\n",
+      "5 14 289 22 287\n",
+      "5 15 289 10 287\n",
+      "5 16 289 60 287\n",
+      "6 7 285 261 267\n",
+      "6 8 285 244 267\n",
+      "6 9 285 283 267\n",
+      "283 267 230\n",
+      "16\n",
+      "53\n",
+      "37\n",
+      "6 10 285 162 267\n",
+      "6 11 285 100 267\n",
+      "6 12 285 89 267\n",
+      "6 13 285 233 267\n",
+      "6 14 285 22 267\n",
+      "6 15 285 10 267\n",
+      "6 16 285 60 267\n",
+      "7 8 261 244 252\n",
+      "7 9 261 267 252\n",
+      "267 252 230\n",
+      "15\n",
+      "37\n",
+      "22\n",
+      "7 10 261 162 252\n",
+      "7 11 261 100 252\n",
+      "7 12 261 89 252\n",
+      "7 13 261 233 252\n",
+      "7 14 261 22 252\n",
+      "7 15 261 10 252\n",
+      "7 16 261 60 252\n",
+      "8 9 244 252 236\n",
+      "252 236 230\n",
+      "16\n",
+      "22\n",
+      "6\n",
+      "8 10 244 162 236\n",
+      "8 11 244 100 236\n",
+      "8 12 244 89 236\n",
+      "8 13 244 233 236\n",
+      "8 14 244 22 236\n",
+      "8 15 244 10 236\n",
+      "8 16 244 60 236\n",
+      "9 10 236 162 230\n",
+      "9 11 236 100 230\n",
+      "9 12 236 89 230\n",
+      "9 13 236 233 230\n",
+      "233 230 43\n",
+      "3\n",
+      "190\n",
+      "187\n",
+      "9 14 236 22 230\n",
+      "9 15 236 10 230\n",
+      "9 16 236 60 230\n",
+      "10 11 162 100 159\n",
+      "10 12 162 89 159\n",
+      "10 13 162 230 159\n",
+      "230 159 43\n",
+      "71\n",
+      "187\n",
+      "116\n",
+      "10 14 162 22 159\n",
+      "10 15 162 10 159\n",
+      "10 16 162 60 159\n",
+      "11 12 100 89 98\n",
+      "11 13 100 159 98\n",
+      "159 98 43\n",
+      "61\n",
+      "116\n",
+      "55\n",
+      "11 14 100 22 98\n",
+      "11 15 100 10 98\n",
+      "11 16 100 60 98\n",
+      "12 13 89 98 65\n",
+      "98 65 43\n",
+      "33\n",
+      "55\n",
+      "22\n",
+      "12 14 89 22 65\n",
+      "12 15 89 10 65\n",
+      "12 16 89 60 65\n",
+      "13 14 65 22 43\n",
+      "13 15 65 10 43\n",
+      "13 16 65 60 43\n",
+      "60 43 0\n",
+      "17\n",
+      "60\n",
+      "43\n",
+      "14 15 22 10 15\n",
+      "14 16 22 43 15\n",
+      "43 15 0\n",
+      "28\n",
+      "43\n",
+      "15\n",
+      "15 16 10 15 3\n",
+      "15 3 0\n",
+      "12\n",
+      "15\n",
+      "3\n",
+      "0.7093750000000002\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "HCCrun = []\n",
+    "\n",
+    "for i in range(tracker):\n",
+    "    \n",
+    "    image_src = cv2.imread(\"./Thresholding/Otsu/\" + str(i) + \".png\")\n",
+    "\n",
+    "    gray = cv2.cvtColor(image_src, cv2.COLOR_BGR2GRAY)\n",
+    "    ret, gray = cv2.threshold(gray, 250, 255,0)\n",
+    "\n",
+    "    contours, hierarchy = cv2.findContours(gray, cv2.RETR_LIST, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    mask = np.zeros(image_src.shape, np.uint8)\n",
+    "    largest_areas = sorted(contours, key=cv2.contourArea)\n",
+    "    cv2.drawContours(mask, [largest_areas[-1]], 0, (255,255,255,255), -1)\n",
+    "    removed = cv2.add(image_src, mask)\n",
+    "    \n",
+    "    cv2.imwrite(\"Edges/Cont/\" + str(i) + \".png\",removed) \n",
+    "    \n",
+    "    cnts = cv2.findContours(gray, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    cnts = cnts[0] if len(cnts) == 2 else cnts[1]\n",
+    "    \n",
+    "    y5 = []\n",
+    "    h5 = []\n",
+    "    \n",
+    "    for c in cnts:\n",
+    "        x,y,w,h = cv2.boundingRect(c)\n",
+    "        y5.append(y)\n",
+    "        h5.append(h)\n",
+    "     \n",
+    "    for r in range(len(y5)):\n",
+    "        g = y5[r] + h5[r]\n",
+    "        for j in range(len(y5)):\n",
+    "            if r < j:\n",
+    "                q = y5[j] + h5[j]\n",
+    "                if q > y5[r]:\n",
+    "                    z = q - y5[r]\n",
+    "                    q = q-z\n",
+    "                    h5[j] = h5[j] - z\n",
+    "    \n",
+    "    HCCrun.append((sum(h5))/(np.size(image_src,0)))   \n",
+    "    \n",
+    "    if i > 0:\n",
+    "        if i == 1:\n",
+    "            ImgL = cv2.imread(\"./Edges/Cont/\" + str(i-1) + \".png\")\n",
+    "            ImgR = cv2.imread(\"./Edges/Cont/\" + str(i) + \".png\")\n",
+    "            ContMain = np.concatenate((ImgL, ImgR), axis=1)\n",
+    "        else:\n",
+    "            ImgR = cv2.imread(\"./Edges/Cont/\" + str(i) + \".png\")\n",
+    "            ContMain = np.concatenate((ContMain, ImgR), axis=1)  \n",
+    "\n",
+    "print(sum(HCCrun)/len(HCCrun))\n",
+    "            \n",
+    "cv2.imwrite('Edges/ContTest.png',ContMain) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[280, 269, 252, 240, 163, 156, 119, 109, 105, 86, 49, 41, 32, 15, 0]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(y5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ImgL.shape, ImgR.shape)"
+   ]
   },
   {
    "cell_type": "code",
