--- a/Job_script/load_image.ipynb
+++ b/Job_script/load_image.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -154,19 +154,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Produce a monochrome image where the hydrides are white, and the matrix is black. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Break the images into vertical strips to reduce the effects of interference on measuring the radial HCC. Blur corresponding strips."
+    "The images gained from the raw data is read with a BGR code through opencv instead of a RGB code. This doesn't matter as we will be transforming them into black and white images eventually. Due to the large area of the images being analysed, any standard connectivity methods will not work as every projection will have at least one hydride shadow. Therefore, we begin by breaking the image into vertical strips to reduce the effects of interference on measuring the radial HCC. Following from this we blur corresponding strips and save them in their own directorys."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -177,24 +170,27 @@
        "True"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#define the number of veritcal splits we require\n",
     "SecNum = 15\n",
     "\n",
+    "#this small loop confirms that the total width of the image can be split into the defined number of sections, \n",
+    "# if not another section will be added until equality is achieved\n",
     "while True:\n",
     "    if (np.size(img,1) % SecNum) !=0:\n",
     "        SecNum += 1\n",
     "    else:\n",
     "        break\n",
-    "        \n",
-    "sections = (np.size(img,1) / SecNum)\n",
     "\n",
+    "#introducing a tracker variable allows for simple passing of number of slices between chunks\n",
     "tracker = 0\n",
     "\n",
+    "#this loop takes the image and vertically slices it in equal widths as defined above\n",
     "for x in range(0,np.size(img,1),SecNum):\n",
     "        x1 = x + SecNum\n",
     "        section = img[0:np.size(img,0), x:x1]\n",
@@ -202,7 +198,8 @@
     "        cv2.imwrite(\"ImagePrep/Sections/\" + str(tracker) +\".png\",section)\n",
     "        \n",
     "        tracker +=1\n",
-    "        \n",
+    "\n",
+    "#following from this, the slices are then blurred to reduce noise and transformed to their original black and white colour\n",
     "for i in range(0,tracker):\n",
     "    Sec = cv2.imread(\"./ImagePrep/Sections/\" + str(i) + \".png\")\n",
     "    \n",
@@ -210,7 +207,8 @@
     "    \n",
     "    Blur = cv2.GaussianBlur(Sec, (7,7),0)\n",
     "    cv2.imwrite(\"ImagePrep/Blurs/\" + str(i) +\".png\",Blur)\n",
-    "    \n",
+    "\n",
+    "#while technically unnecessary, this stage restitches the blured slices to allow for viewing of the transformed image\n",
     "    if i > 0:\n",
     "        if i == 1:\n",
     "            ImgL = cv2.imread(\"./ImagePrep/Blurs/\" + str(i-1) + \".png\")\n",
@@ -234,8 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thresholding - Remove un-wanted features such as X and Y from images.\n",
-    "Side by side comparison to original image and image after thresholding method.\n",
+    "This stage is to transform the image to be totally binary from the grayscale images saved and blured.\n",
     "Use 3 different thresholding method and see which one works best ."
    ]
   },
@@ -243,21 +240,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Otsu method is first carried out"
+    "Otsu method is first carried out."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17351bcf310>"
+       "<matplotlib.image.AxesImage at 0x1fe4a597280>"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -275,15 +272,18 @@
     }
    ],
    "source": [
+    "#using the tracker variable defined earlier, any actions can be repeated across the entirety of the slices easily\n",
     "for i in range(tracker):\n",
     "    Blur = cv2.imread(\"./ImagePrep/Blurs/\" + str(i) + \".png\", 0)\n",
     "    \n",
-    "    \n",
+    "#Using the inbuilt opencv otsu thresholding method and defining it as a binary threshold, aka only black and white, \n",
+    "# both a thresholded image is produced and the automatically detected thresholding value is found.   \n",
     "    ThreshValue, ThreshOtsu = cv2.threshold(Blur,0,255,cv2.THRESH_BINARY+cv2.THRESH_OTSU)\n",
     "    \n",
     "    cv2.imwrite(\"Thresholding/Otsu/\" + str(i) +\".png\",ThreshOtsu)\n",
     "    np.save(\"Thresholding/Otsu/\" + str(i), ThreshOtsu)\n",
     "    \n",
+    "#As earlier, the individual slices are saved to their own directory and an overall image is made from reattaching the slices.\n",
     "    if i > 0:\n",
     "        if i == 1:\n",
     "            ImgL = cv2.imread(\"./Thresholding/Otsu/\" + str(i-1) + \".png\")\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -315,10 +315,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17351865670>"
+       "<matplotlib.image.AxesImage at 0x1fe4a394e80>"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -336,6 +336,7 @@
     }
    ],
    "source": [
+    "#As previously, the tracker variable is used to initiate the loop for the thresholding.\n",
     "for i in range(tracker):\n",
     "    ImgIn = cv2.imread(\"./ImagePrep/Blurs/\" + str(i) + \".png\",1)\n",
     "    \n",
@@ -345,6 +346,7 @@
     "\n",
     "    criteria = (cv2.TERM_CRITERIA_EPS + cv2.TERM_CRITERIA_MAX_ITER, 100, 0.1)\n",
     "\n",
+    "#The number of channels is defined for the k-means method, as it's black and white \"2\" is chosen\n",
     "    k = 2\n",
     "\n",
     "    ret, labels, clusters = cv2.kmeans(reshapedImage, k, None, criteria, 10, cv2.KMEANS_RANDOM_CENTERS)\n",
@@ -359,6 +361,7 @@
     "    \n",
     "    cv2.imwrite(\"Thresholding/Kmeans/\" + str(i) +\".png\",clusteredImage)\n",
     "    \n",
+    "#As earlier, the individual slices are saved to their own directory and an overall image is made from reattaching the slices.\n",
     "    if i > 0:\n",
     "        if i == 1:\n",
     "            ImgL = cv2.imread(\"./Thresholding/Kmeans/\" + str(i-1) + \".png\")\n",
@@ -389,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -400,7 +403,7 @@
        "True"
       ]
      },
-     "execution_count": 356,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -491,15 +494,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5886217948717947\n",
-      "0.5886217948717947\n"
+      "[469, 461, 457, 447, 439, 425, 406, 402, 391, 375, 368, 360, 358, 350, 326, 318, 316, 300, 292, 269, 266, 265, 263, 261, 255, 240, 226, 218, 217, 205, 195, 193, 193, 186, 178, 171, 169, 167, 167, 148, 135, 132, 122, 119, 108, 101, 93, 93, 87, 79, 75, 62, 60, 53, 45, 43]\n",
+      "[]\n",
+      "[476, 471, 459, 457, 448, 442, 441, 433, 417, 400, 388, 376, 365, 350, 350, 332, 312, 299, 293, 274, 266, 256, 253, 234, 228, 219, 201, 182, 171, 167, 158, 141, 138, 123, 112, 109, 100, 85, 71, 56, 47, 42, 20]\n",
+      "[]\n",
+      "[478, 477, 473, 471, 455, 444, 443, 433, 430, 425, 424, 424, 420, 413, 412, 411, 388, 376, 376, 373, 368, 360, 350, 341, 333, 327, 312, 285, 284, 281, 276, 274, 265, 248, 243, 236, 230, 219, 215, 201, 189, 172, 161, 159, 156, 150, 145, 136, 135, 126, 114, 104, 100, 89, 85, 71, 68, 55, 43, 28]\n",
+      "[]\n",
+      "[472, 466, 456, 445, 437, 431, 423, 422, 419, 405, 392, 387, 375, 367, 358, 347, 328, 324, 316, 306, 300, 291, 275, 270, 258, 246, 230, 224, 220, 219, 212, 204, 199, 191, 180, 172, 161, 158, 151, 126, 105, 103, 100, 99, 90, 85, 82, 69, 62, 54, 46, 38]\n",
+      "[]\n",
+      "[475, 464, 431, 412, 404, 400, 387, 374, 367, 350, 349, 329, 323, 317, 310, 309, 296, 273, 255, 245, 244, 243, 231, 225, 224, 219, 214, 204, 187, 181, 180, 160, 159, 159, 155, 143, 130, 127, 113, 107, 96, 81, 65, 57, 46, 34, 29]\n",
+      "[]\n",
+      "[474, 458, 449, 442, 421, 415, 412, 404, 398, 397, 389, 382, 367, 366, 363, 353, 343, 321, 320, 319, 314, 307, 296, 286, 273, 271, 241, 229, 216, 211, 203, 194, 190, 180, 170, 164, 155, 149, 135, 129, 117, 117, 102, 94, 93, 93, 90, 75, 62, 49, 48, 38, 36, 23]\n",
+      "[]\n",
+      "[464, 460, 456, 449, 428, 428, 421, 408, 401, 397, 379, 377, 365, 361, 360, 358, 348, 341, 331, 325, 319, 310, 302, 280, 272, 262, 254, 252, 245, 232, 213, 209, 204, 191, 184, 176, 174, 156, 146, 136, 134, 127, 121, 119, 112, 107, 103, 100, 92, 85, 76, 75, 64, 59, 40, 37, 26, 25]\n",
+      "[]\n",
+      "[475, 469, 456, 448, 434, 425, 417, 411, 399, 391, 388, 382, 374, 368, 363, 357, 344, 342, 341, 333, 320, 313, 299, 285, 274, 272, 262, 257, 244, 234, 227, 224, 207, 202, 194, 194, 192, 186, 173, 164, 159, 153, 146, 141, 130, 125, 120, 100, 95, 93, 73, 69, 59, 47, 39, 26]\n",
+      "[]\n",
+      "[473, 472, 460, 458, 450, 440, 433, 424, 419, 406, 401, 398, 391, 384, 379, 370, 366, 362, 362, 356, 340, 315, 295, 293, 293, 276, 273, 265, 262, 255, 252, 249, 245, 243, 231, 226, 223, 213, 211, 203, 176, 171, 165, 160, 149, 144, 132, 108, 97, 96, 89, 82, 70, 62, 52, 46, 42, 18]\n",
+      "[]\n",
+      "[469, 446, 440, 439, 439, 436, 413, 407, 397, 371, 364, 349, 314, 308, 304, 289, 281, 279, 278, 269, 262, 234, 232, 231, 224, 209, 200, 191, 185, 180, 172, 172, 161, 152, 145, 143, 119, 113, 90, 79, 73, 68, 60, 47, 34, 17]\n",
+      "[]\n",
+      "[465, 455, 452, 442, 432, 423, 422, 415, 408, 397, 379, 374, 366, 357, 347, 324, 324, 317, 315, 314, 310, 307, 302, 300, 288, 281, 276, 276, 274, 269, 247, 243, 231, 225, 221, 209, 202, 195, 187, 173, 157, 136, 126, 116, 106, 106, 99, 91, 86, 84, 69, 68, 59, 54, 49, 42, 29, 21]\n",
+      "[]\n",
+      "[469, 467, 457, 443, 441, 440, 423, 410, 409, 390, 388, 378, 374, 374, 367, 365, 356, 347, 339, 327, 325, 317, 310, 303, 297, 294, 292, 282, 272, 263, 256, 248, 245, 235, 228, 205, 190, 173, 157, 137, 137, 124, 115, 106, 102, 100, 95, 87, 84, 65, 48, 45, 36, 31]\n",
+      "[]\n",
+      "[468, 467, 457, 445, 441, 430, 423, 417, 414, 409, 403, 401, 392, 387, 379, 363, 358, 357, 348, 339, 334, 330, 314, 304, 295, 289, 279, 273, 265, 262, 260, 256, 243, 235, 219, 210, 205, 185, 178, 171, 166, 156, 145, 139, 138, 128, 118, 92, 80, 65, 58, 47, 45, 39, 33]\n",
+      "[]\n",
+      "[466, 449, 442, 431, 422, 415, 407, 388, 382, 378, 370, 360, 334, 333, 322, 318, 309, 299, 292, 288, 280, 269, 269, 265, 246, 239, 234, 215, 196, 194, 183, 167, 160, 157, 157, 155, 152, 144, 140, 127, 127, 118, 112, 102, 102, 92, 90, 83, 81, 76, 69, 67, 67, 59, 52, 50, 44, 32, 22]\n",
+      "[]\n",
+      "[478, 446, 432, 428, 418, 406, 395, 389, 381, 369, 362, 354, 350, 343, 334, 332, 318, 317, 307, 287, 266, 255, 251, 239, 232, 223, 218, 201, 194, 191, 179, 167, 159, 155, 153, 153, 149, 138, 135, 123, 112, 104, 95, 80, 77, 61, 52, 46, 42, 30]\n",
+      "[]\n",
+      "[471, 463, 456, 442, 419, 414, 396, 394, 387, 380, 370, 361, 344, 337, 333, 317, 303, 294, 276, 266, 248, 237, 232, 226, 214, 209, 202, 191, 179, 178, 161, 156, 147, 139, 125, 120, 116, 115, 102, 90, 87, 74, 66, 49, 37, 34]\n",
+      "[]\n",
+      "[468, 459, 445, 444, 423, 417, 405, 398, 390, 390, 380, 375, 370, 356, 337, 333, 331, 313, 304, 303, 300, 291, 285, 270, 244, 238, 229, 220, 215, 206, 206, 196, 177, 175, 174, 161, 151, 137, 134, 123, 118, 116, 106, 87, 77, 60, 48, 36, 36, 26, 20]\n",
+      "[]\n",
+      "[476, 463, 461, 461, 460, 445, 445, 432, 420, 407, 404, 396, 395, 387, 369, 356, 346, 330, 319, 310, 300, 292, 283, 278, 269, 247, 245, 232, 214, 196, 188, 177, 173, 165, 147, 128, 118, 107, 104, 88, 86, 81, 70, 55, 54, 32, 29, 18]\n",
+      "[]\n",
+      "[476, 465, 451, 446, 435, 431, 421, 419, 413, 412, 411, 407, 404, 395, 390, 384, 372, 364, 357, 353, 344, 323, 315, 303, 297, 292, 285, 283, 273, 272, 272, 268, 256, 245, 239, 212, 202, 198, 195, 194, 188, 187, 179, 162, 159, 148, 131, 125, 120, 111, 96, 86, 86, 67, 56, 54, 42, 38, 36, 28]\n",
+      "[]\n",
+      "[477, 474, 466, 445, 428, 426, 416, 415, 405, 398, 390, 378, 374, 359, 347, 338, 330, 327, 320, 318, 308, 289, 280, 267, 255, 241, 232, 225, 207, 205, 200, 199, 193, 183, 162, 151, 140, 124, 115, 115, 101, 100, 89, 85, 70, 61, 54, 28, 6]\n",
+      "[]\n",
+      "[471, 468, 458, 456, 449, 445, 443, 432, 422, 416, 404, 394, 391, 381, 373, 364, 357, 354, 349, 328, 322, 320, 316, 309, 302, 284, 283, 268, 253, 248, 236, 233, 220, 196, 190, 189, 182, 168, 161, 152, 135, 133, 117, 110, 103, 98, 94, 91, 73, 59, 55, 31, 29]\n",
+      "[]\n",
+      "[469, 459, 452, 451, 449, 445, 431, 416, 414, 396, 382, 378, 360, 350, 326, 307, 304, 295, 281, 281, 276, 267, 265, 257, 252, 248, 231, 218, 213, 207, 198, 191, 188, 184, 181, 173, 159, 150, 136, 123, 114, 92, 91, 80, 75, 73, 65, 58, 41, 38, 13, 13]\n",
+      "[]\n",
+      "[476, 461, 454, 450, 441, 431, 419, 417, 405, 403, 380, 370, 365, 348, 338, 320, 315, 314, 312, 310, 295, 284, 280, 264, 258, 256, 249, 233, 232, 217, 216, 208, 201, 195, 186, 180, 180, 170, 169, 168, 158, 152, 128, 124, 101, 99, 84, 70, 66, 56, 41, 25, 2]\n",
+      "[]\n",
+      "[474, 461, 456, 447, 431, 431, 422, 415, 402, 380, 374, 369, 363, 362, 336, 333, 322, 316, 304, 301, 295, 287, 275, 267, 258, 255, 235, 231, 223, 217, 215, 211, 211, 196, 196, 183, 177, 165, 162, 157, 146, 141, 129, 126, 117, 114, 108, 92, 85, 78, 49, 39, 0, 0]\n",
+      "[]\n",
+      "[476, 467, 456, 443, 436, 431, 414, 401, 399, 394, 387, 385, 374, 374, 371, 364, 357, 335, 329, 322, 314, 304, 294, 286, 279, 272, 264, 256, 253, 244, 236, 232, 221, 221, 213, 211, 198, 192, 180, 175, 161, 151, 145, 132, 128, 105, 97, 93, 91, 91, 85, 71, 45, 39, 36, 23, 7]\n",
+      "[]\n",
+      "[475, 463, 455, 449, 438, 437, 418, 401, 378, 365, 357, 352, 323, 308, 303, 279, 266, 260, 239, 232, 229, 211, 194, 184, 166, 163, 138, 121, 92, 81, 62, 60, 0]\n",
+      "[]\n",
+      "Otsu HCC: 0.5886217948717947\n",
+      "K-means HCC: 0.5886217948717947\n"
      ]
     },
     {
@@ -508,7 +563,7 @@
        "True"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +608,9 @@
     "                    q = q-z\n",
     "                    h5[j] = h5[j] - z\n",
     "    \n",
-    "    HCCrun_Otsu.append((sum(h5))/(np.size(image_src_Otsu,0)))   \n",
+    "    HCCrun_Otsu.append((sum(h5))/(np.size(image_src_Otsu,0)))\n",
+    "    \n",
+    "    del cnts\n",
     "    \n",
     "    image_src_Kmeans = cv2.imread(\"./Edges/Kmeans/\" + str(i) + \".png\")\n",
     "\n",
@@ -607,12 +664,19 @@
     "            ImgR = cv2.imread(\"./Edges/ContKmeans/\" + str(i) + \".png\")\n",
     "            ContKmeans = np.concatenate((ContKmeans, ImgR), axis=1)\n",
     "\n",
-    "print(sum(HCCrun_Otsu)/len(HCCrun_Otsu))\n",
-    "print(sum(HCCrun_Kmeans)/len(HCCrun_Kmeans))\n",
+    "print(\"Otsu HCC: \" + str(sum(HCCrun_Otsu)/len(HCCrun_Otsu)))\n",
+    "print(\"K-means HCC: \" + str(sum(HCCrun_Kmeans)/len(HCCrun_Kmeans)))\n",
     "            \n",
     "cv2.imwrite('Edges/ContOtsu.png',ContOtsu)\n",
     "cv2.imwrite('Edges/ContKmeans.png',ContKmeans) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
