--- a/Job_script/Workflow_Group2.ipynb
+++ b/Job_script/Workflow_Group2.ipynb
@@ -498,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We plot the images after the HCC calculation using the method 2 to observe the quantity of damage that has been produced during the HCC calculation for each threshold applied."
+    "We plot the images after the HCC calculation using the method 2 to observe the quantity of damage that has been produced to the image during the HCC calculation for each threshold applied."
    ]
   },
   {
