--- a/Job_script/Workflow_Group2.ipynb
+++ b/Job_script/Workflow_Group2.ipynb
@@ -534,7 +534,7 @@
     "                                                        # a folder called \"Edges\"\n",
     "\n",
     "plt.title(\"Otsu threshold\")\n",
-    "plt.imshow(mpimg.imread('Edges/ContOtsu.png'), label=\"Otsu\")      # The resulting image after the HCC calculation is shon here"
+    "plt.imshow(mpimg.imread('Edges/ContOtsu.png'), label=\"Otsu\")      # The resulting image after the HCC calculation is shown here"
    ]
   },
   {
@@ -570,7 +570,7 @@
     "                                                     # a folder called \"Edges\"\n",
     "    \n",
     "plt.title(\"K-means threshold\")                                                        \n",
-    "plt.imshow(mpimg.imread('Edges/ContKmeans.png'))  # The resulting image after the HCC calculation is shon here"
+    "plt.imshow(mpimg.imread('Edges/ContKmeans.png'))  # The resulting image after the HCC calculation is shown here"
    ]
   }
  ],
